[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-input-bypass"
version = "0.1.0"
description = "Adaptive user-mode input injection (ViGEmBus / mouse_event) for Win32 games."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "game-input-bypass contributors" }]
keywords = ["input", "injection", "vigem", "xinput", "win32", "gamedev", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pywin32>=305",
]

[project.optional-dependencies]
gamepad = ["vgamepad>=0.1.0"]
dev = ["pytest>=7", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/yourname/game-input-bypass"
Issues   = "https://github.com/yourname/game-input-bypass/issues"

[tool.setuptools.packages.find]
include = ["game_input_bypass*"]

[tool.ruff]
line-length = 100
target-version = "py39"
