[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-input-bypass"
version = "0.2.0"
description = "External, fully user-mode input delivery for Win32 games that filter synthetic input. ViGEmBus-backed virtual HID controller."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "game-input-bypass contributors" }]
keywords = ["input", "injection", "vigem", "xinput", "win32", "gamedev", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pywin32>=305",
    "vgamepad>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/0xDI/game-input-bypass"
Issues   = "https://github.com/0xDI/game-input-bypass/issues"

[tool.setuptools.packages.find]
include = ["game_input_bypass*"]

[tool.ruff]
line-length = 100
target-version = "py39"
